--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 					<div id="intro">
 						<h1>BeautiLuxe<br />
 						Studio</h1>
-						<p>Book your appointment Now</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -36,7 +35,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Services</a></li>
+							<li><a href="services.html">Services</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.instagram.com/angelikababii/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -50,47 +49,57 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a >Transform Your Look.<br />
-										Elevate Your Confidence.</a></h2>
-									<p>Experience the artistry of expert stylists in a welcoming and relaxing environment.<br />
-										From trendy cuts to luxurious treatments,<br />
-										we've got you covered.</p>
+									<h2><a >Be your own kind of<br />
+										beautiful.</a></h2>
+									<p>
+										Flawless color, seemless length<br />
+										book your dream hair today!</p>
 								</header>
-								<a  class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<!-- <a  class="image main"><img src="images/pic01.jpg" alt="" /></a> -->
+								<!-- </article> -->
+
+								<h3>My work</h3>
+								<div class="box alt">
+									<div class="row gtr-50 gtr-uniform">
+										<div class="col-4"><span class="image fit"><img src="images/IMG_0900.JPEG" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/IMG_0248.JPEG" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/IMG_0932.png" alt="" /></span></div>
+										<!-- Break -->
+										<div class="col-4"><span class="image fit"><img src="images/IMG_1400.png" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/IMG_1401.JPEG" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/IMG_1493.JPEG" alt="" /></span></div>
+										<!-- Break -->
+										<div class="col-4"><span class="image fit"><img src="images/IMG_1533.JPEG" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/IMG_7165.JPG" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/IMG_2357.png" alt="" /></span></div>
+										<!-- Break -->
+										<div class="col-4"><span class="image fit"><img src="images/IMG_2456.png" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/IMG_2342.JPEG" alt="" /></span></div>
+										<div class="col-4"><span class="image fit"><img src="images/IMG_8903.JPEG" alt="" /></span></div>
+									</div>
+								</div>
 							</article>
 
-							<h3>My work</h3>
-							<div class="box alt">
-								<div class="row gtr-50 gtr-uniform">
-									<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-									<!-- Break -->
-									<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-									<!-- Break -->
-									<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-								</div>
-							</div>
-
 							<!-- Footer -->
-								<footer id="footer">
-									<section class="split contact">
-										<section class="alt">
-											<h3>Address</h3>
-											<p>91 Randhurst Village Dr Suite 101<br />
-											Mt Prospect, IL 60056</p>
-										</section>
-										<section>
-											<h3>Phone</h3>
-											<p><a href="tel:7737102225">(773) 710-2225</a></p>
-										</section>
-									</section>
-								</footer>
-					</div>
+					<footer id="footer">
+						<section class="split contact">
+							<section class="alt">
+								<h3>Address</h3>
+								<p>91 Randhurst Village Dr Suite 101<br />
+								Mt Prospect, IL 60056</p>
+							</section>
+							<section>
+								<h3>Phone</h3>
+								<p><a href="tel:7737102225">(773) 710-2225</a></p>
+							</section>
+							<section>
+								<h3>Social</h3>
+								<ul class="icons alt">
+									<li><a href="https://www.instagram.com/angelikababii/?hl=en" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								</ul>
+							</section>
+						</section>
+					</footer>
 							<!-- Copyright -->
 								<div id="copyright">
 									<ul><li>&copy; BeautiLuxe LLC</li></ul>
