--- a/index.html
+++ b/index.html
@@ -1,118 +1,202 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Massively by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>beautiluxe Studio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+  <head>
+    <title>beautiluxe Studio</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
+  </head>
+  <body class="is-preload">
+    <!-- Wrapper -->
+    <div id="wrapper" class="fade-in">
+      <!-- Intro -->
+      <div id="intro">
+        <h1>
+          BeautiLuxe<br />
+          Studio
+        </h1>
+        <ul class="actions">
+          <li>
+            <a
+              href="#header"
+              class="button icon solid solo fa-arrow-down scrolly"
+              >Continue</a
+            >
+          </li>
+        </ul>
+      </div>
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+      <!-- Header -->
+      <header id="header">
+        <a class="logo">BeautiLuxe</a>
+      </header>
 
-				<!-- Intro -->
-					<div id="intro">
-						<h1>BeautiLuxe<br />
-						Studio</h1>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
+      <!-- Nav -->
+      <nav id="nav">
+        <ul class="links">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="services.html">Services</a></li>
+        </ul>
+        <ul class="icons">
+          <li>
+            <a
+              href="https://www.instagram.com/angelikababii/?hl=en"
+              class="icon brands fa-instagram"
+              ><span class="label">Instagram</span></a
+            >
+          </li>
+          <li>
+            <a href="tel:7737102225" class="fa fa-phone"
+              ><span class="label"></span
+            ></a>
+          </li>
+        </ul>
+      </nav>
 
-				<!-- Header -->
-					<header id="header">
-						<a class="logo">BeautiLuxe</a>
-					</header>
+      <!-- Main -->
+      <div id="main">
+        <!-- Featured Post -->
+        <article class="post featured">
+          <header class="major">
+            <h2>
+              <a
+                >Be your own kind of<br />
+                beautiful.</a
+              >
+            </h2>
+            <p>
+              Flawless color, seemless length<br />
+              book your dream hair today!
+            </p>
+          </header>
+          <!-- <a  class="image main"><img src="images/pic01.jpg" alt="" /></a> -->
+          <!-- </article> -->
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="services.html">Services</a></li>
-						</ul>
-						<ul class="icons">
-							<li><a href="https://www.instagram.com/angelikababii/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="tel:7737102225" class="fa fa-phone"><span class="label"></span></a></li>
-						</ul>
-					</nav>
+          <h3>My work</h3>
+          <div class="box alt">
+            <div class="row gtr-50 gtr-uniform">
+              <div class="col-4">
+                <span class="image fit"
+                  ><img src="images/IMG_0900.JPEG" alt=""
+                /></span>
+              </div>
+              <div class="col-4">
+                <span class="image fit"
+                  ><img src="images/IMG_0248.JPEG" alt=""
+                /></span>
+              </div>
+              <div class="col-4">
+                <span class="image fit"
+                  ><img src="images/IMG_0932.png" alt=""
+                /></span>
+              </div>
+              <!-- Break -->
+              <div class="col-4">
+                <span class="image fit"
+                  ><img src="images/IMG_1400.png" alt=""
+                /></span>
+              </div>
+              <div class="col-4">
+                <span class="image fit"
+                  ><img src="images/IMG_1401.JPEG" alt=""
+                /></span>
+              </div>
+              <div class="col-4">
+                <span class="image fit"
+                  ><img src="images/IMG_1493.JPEG" alt=""
+                /></span>
+              </div>
+              <!-- Break -->
+              <div class="col-4">
+                <span class="image fit"
+                  ><img src="images/IMG_1533.JPEG" alt=""
+                /></span>
+              </div>
+              <div class="col-4">
+                <span class="image fit"
+                  ><img src="images/IMG_7165.JPG" alt=""
+                /></span>
+              </div>
+              <div class="col-4">
+                <span class="image fit"
+                  ><img src="images/IMG_2357.png" alt=""
+                /></span>
+              </div>
+              <!-- Break -->
+              <div class="col-4">
+                <span class="image fit"
+                  ><img src="images/IMG_2456.png" alt=""
+                /></span>
+              </div>
+              <div class="col-4">
+                <span class="image fit"
+                  ><img src="images/IMG_2342.JPEG" alt=""
+                /></span>
+              </div>
+              <div class="col-4">
+                <span class="image fit"
+                  ><img src="images/IMG_8903.JPEG" alt=""
+                /></span>
+              </div>
+            </div>
+          </div>
+        </article>
+	</div>
 
-				<!-- Main -->
-					<div id="main">
+        <!-- Footer -->
+        <footer id="footer">
+          <section class="split contact">
+            <section class="alt">
+              <h3>Address</h3>
+              <p>
+                91 Randhurst Village Dr Suite 101<br />
+                Mt Prospect, IL 60056
+              </p>
+            </section>
+            <section>
+              <h3>Phone</h3>
+              <p><a href="tel:7737102225">(773) 710-2225</a></p>
+            </section>
+            <section>
+              <h3>Social</h3>
+              <ul class="icons alt">
+                <li>
+                  <a
+                    href="https://www.instagram.com/angelikababii/?hl=en"
+                    class="icon brands alt fa-instagram"
+                    ><span class="label">Instagram</span></a
+                  >
+                </li>
+              </ul>
+            </section>
+          </section>
+        </footer>
 
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h2><a >Be your own kind of<br />
-										beautiful.</a></h2>
-									<p>
-										Flawless color, seemless length<br />
-										book your dream hair today!</p>
-								</header>
-								<!-- <a  class="image main"><img src="images/pic01.jpg" alt="" /></a> -->
-								<!-- </article> -->
-
-								<h3>My work</h3>
-								<div class="box alt">
-									<div class="row gtr-50 gtr-uniform">
-										<div class="col-4"><span class="image fit"><img src="images/IMG_0900.JPEG" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/IMG_0248.JPEG" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/IMG_0932.png" alt="" /></span></div>
-										<!-- Break -->
-										<div class="col-4"><span class="image fit"><img src="images/IMG_1400.png" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/IMG_1401.JPEG" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/IMG_1493.JPEG" alt="" /></span></div>
-										<!-- Break -->
-										<div class="col-4"><span class="image fit"><img src="images/IMG_1533.JPEG" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/IMG_7165.JPG" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/IMG_2357.png" alt="" /></span></div>
-										<!-- Break -->
-										<div class="col-4"><span class="image fit"><img src="images/IMG_2456.png" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/IMG_2342.JPEG" alt="" /></span></div>
-										<div class="col-4"><span class="image fit"><img src="images/IMG_8903.JPEG" alt="" /></span></div>
-									</div>
-								</div>
-							</article>
-
-							<!-- Footer -->
-					<footer id="footer">
-						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>91 Randhurst Village Dr Suite 101<br />
-								Mt Prospect, IL 60056</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="tel:7737102225">(773) 710-2225</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="https://www.instagram.com/angelikababii/?hl=en" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
-							<!-- Copyright -->
-								<div id="copyright">
-									<ul><li>&copy; BeautiLuxe LLC</li></ul>
-								</div>
-			</div>
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+        <!-- Copyright -->
+        <div id="copyright">
+          <ul>
+            <li>&copy; BeautiLuxe LLC</li>
+          </ul>
+        </div>
+    </div>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
