--- a/services.html
+++ b/services.html
@@ -1,127 +1,138 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Massively by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
+  </head>
+  <body class="is-preload">
+    <!-- Wrapper -->
+    <div id="wrapper">
+      <!-- Header -->
+      <header id="header">
+        <a href="index.html" class="logo">BeautiLuxe</a>
+      </header>
 
-		
+      <!-- Nav -->
+      <nav id="nav">
+        <ul class="links">
+          <li><a href="index.html">Home</a></li>
+          <li class="active"><a href="generic.html">Services</a></li>
+        </ul>
+        <ul class="icons">
+          <li>
+            <a
+              href="https://www.instagram.com/angelikababii/?hl=en"
+              class="icon brands fa-instagram"
+              ><span class="label">Instagram</span></a
+            >
+          </li>
+          <li>
+            <a href="tel:7737102225" class="fa fa-phone"
+              ><span class="label"></span
+            ></a>
+          </li>
+        </ul>
+      </nav>
+      <header class="major"></header>
+      <!-- Main -->
+      <div id="main">
+        <div class="row">
+          <div class="col-6 col-12-small">
+            <h3>Color</h3>
+            <ul>
+              <li>Toner & Style: <b>$60+</b></li>
+              <li>Blended Toner & Style: <b>$90+</b></li>
+              <li>Bleach Touchup with Toner: <b>$120+</b></li>
+              <li>Color Touchup: <b>$110+</b></li>
+              <li>All Over Color: <b>$140+</b></li>
+              <li>Color Correction: <b>$230+</b></li>
+              <li>Highlights: Partial <b>$150+</b> | Full <b>$180+</b></li>
+              <li>Balayage: Partial <b>$160+</b> | Full <b>$200+</b></li>
+            </ul>
+          </div>
+          <div class="col-6 col-12-small">
+            <h3>Extensions</h3>
+            <ul>
+              <li><b>By consultation</b></li>
+            </ul>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+            <h3>Haircut</h3>
+            <ul>
+              <li>Haircut & Style: <b>$40+</b></li>
+            </ul>
 
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">BeautiLuxe</a>
-					</header>
+            <h3>Add ons</h3>
+            <ul>
+              <li>Deep Conditioning: <b>$30</b></li>
+              <li>Bleach Pull Through/Refresh: <b>$20+</b></li>
+            </ul>
+          </div>
+          <div class="col-6 col-12-small"></div>
+        </div>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="generic.html">Services</a></li>
-						</ul>
-						<ul class="icons">
-							<li><a href="https://www.instagram.com/angelikababii/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="tel:7737102225" class="fa fa-phone"><span class="label"></span></a></li>
-						</ul>
-					</nav>
-					<header class="major">
+        <article class="post featured">
+          <header class="major">
+            <p><b>*All services include shadow root & trim.*</b></p>
+          </header>
+        </article>
+      </div>
 
-					</header>
-				<!-- Main -->
-					<div id="main">
-		<div class="row">
-			<div class="col-6 col-12-small">
+      <!-- Footer -->
+      <footer id="footer">
+        <section class="split contact">
+          <section class="alt">
+            <h3>Address</h3>
+            <p>
+              91 Randhurst Village Dr Suite 101<br />
+              Mt Prospect, IL 60056
+            </p>
+          </section>
+          <section>
+            <h3>Phone</h3>
+            <p><a href="tel:7737102225">(773) 710-2225</a></p>
+          </section>
+          <section>
+            <h3>Social</h3>
+            <ul class="icons alt">
+              <li>
+                <a
+                  href="https://www.instagram.com/angelikababii/?hl=en"
+                  class="icon brands alt fa-instagram"
+                  ><span class="label">Instagram</span></a
+                >
+              </li>
+            </ul>
+          </section>
+        </section>
+      </footer>
 
-				<h3>Color</h3>
-				<ul>
-					<li>Toner & Style: <b>$60+</b></li>
-					<li>Blended Toner & Style: <b>$90+</b></li>
-					<li>Bleach Touchup with Toner: <b>$120+</b></li>
-					<li>Color Touchup: <b>$110+</b></li>
-					<li>All Over Color: <b>$140+</b></li>
-					<li>Color Correction: <b>$230+</b></li>
-					<li>Highlights: Partial <b>$150+</b> | Full <b>$180+</b></li>
-					<li>Balayage: Partial <b>$160+</b> | Full <b>$200+</b>
-					</li>
-				</ul>
+      <!-- Copyright -->
+      <div id="copyright">
+        <ul>
+          <li>&copy; BeautiLuxe LLC</li>
+        </ul>
+      </div>
+    </div>
 
-			</div>
-			<div class="col-6 col-12-small">
-
-				<h3>Extensions</h3>
-				<ul>
-					<li><b>By consultation</b></li>
-				</ul>
-
-				<h3>Haircut</h3>
-				<ul>
-					<li>Haircut & Style: <b>$40+</b></li>
-				</ul>
-				
-				<h3>Add ons</h3>
-				<ul>
-					<li>Deep Conditioning: <b>$30</b></li>
-					<li>Bleach Pull Through/Refresh: <b>$20+</b></li>
-				</ul>
-			</div>
-			<div class="col-6 col-12-small">
-		</div>
-		</div>
-
-		<article class="post featured">
-			<header class="major">
-				<p><b>*All services include shadow root & trim.*</b></p>
-			</header>
-			</article>
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>91 Randhurst Village Dr Suite 101<br />
-								Mt Prospect, IL 60056</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="tel:7737102225">(773) 710-2225</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="https://www.instagram.com/angelikababii/?hl=en" class="icon brands alt fa-instagram"><span
-												class="label">Instagram</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
-
-				<!-- Copyright -->
-				<div id="copyright">
-					<ul><li>&copy; BeautiLuxe LLC</li></ul>
-				</div>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
