--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
             <div class="row gtr-50 gtr-uniform">
               <div class="col-4">
                 <span class="image fit"
-                  ><img src="images/IMG_0900.JPEG" alt=""
+                  ><img src="images/IMG_0900.png" alt=""
                 /></span>
               </div>
               <div class="col-4">
                 <span class="image fit"
-                  ><img src="images/IMG_0248.JPEG" alt=""
+                  ><img src="images/IMG_0248.png" alt=""
                 /></span>
               </div>
               <div class="col-4">
@@ -109,23 +109,23 @@
               </div>
               <div class="col-4">
                 <span class="image fit"
-                  ><img src="images/IMG_1401.JPEG" alt=""
+                  ><img src="images/IMG_1401.png" alt=""
                 /></span>
               </div>
               <div class="col-4">
                 <span class="image fit"
-                  ><img src="images/IMG_1493.JPEG" alt=""
+                  ><img src="images/IMG_1493.png" alt=""
                 /></span>
               </div>
               <!-- Break -->
               <div class="col-4">
                 <span class="image fit"
-                  ><img src="images/IMG_1533.JPEG" alt=""
+                  ><img src="images/IMG_1533.png" alt=""
                 /></span>
               </div>
               <div class="col-4">
                 <span class="image fit"
-                  ><img src="images/IMG_7165.JPG" alt=""
+                  ><img src="images/IMG_7165.png" alt=""
                 /></span>
               </div>
               <div class="col-4">
@@ -141,12 +141,12 @@
               </div>
               <div class="col-4">
                 <span class="image fit"
-                  ><img src="images/IMG_2342.JPEG" alt=""
+                  ><img src="images/IMG_2342.png" alt=""
                 /></span>
               </div>
               <div class="col-4">
                 <span class="image fit"
-                  ><img src="images/IMG_8903.JPEG" alt=""
+                  ><img src="images/IMG_8903.png" alt=""
                 /></span>
               </div>
             </div>
