--- a/services.html
+++ b/services.html
@@ -71,6 +71,7 @@
             <h3>Haircut</h3>
             <ul>
               <li>Haircut & Style: <b>$40+</b></li>
+              <li>Bang Trim: <b>$10</b></li>
             </ul>
 
             <h3>Add ons</h3>
@@ -81,12 +82,6 @@
           </div>
           <div class="col-6 col-12-small"></div>
         </div>
-
-        <article class="post featured">
-          <header class="major">
-            <p><b>*All services include shadow root & trim.*</b></p>
-          </header>
-        </article>
       </div>
 
       <!-- Footer -->
