--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                 beautiful.</a
               >
             </h2>
-            <p>
-              Flawless color, seemless length<br />
-              book your dream hair today!
-            </p>
           </header>
+          <p style="text-align:center;">
+            Flawless color, seemless length<br>
+            Book your dream hair today!
+          </p>
           <!-- <a  class="image main"><img src="images/pic01.jpg" alt="" /></a> -->
           <!-- </article> -->
 
